# CodexBar

./: .gitattributes  .gitignore  .stignore  AGENTS.md  CHANGELOG.md  Cargo.toml  LICENSE  README.md  README.zh-CN.md  VERSIONING.md  dev.ps1  dev.sh  mac-rust-tray-parity-metadata-20260415.txt  rust-tray-parity-local-validation.txt  rust-tray-parity-matrix.txt  rust-tray-parity-windows-build.txt  rust-tray-parity-windows-launch-block.txt  scripts_migrate_settings.py  tmp-check-openssh.cmd  tmp-check-sshd.cmd  tmp-enable-guest-ssh.cmd  tmp-enable-rdp.cmd  tmp-enable-ssh-users.cmd  tmp-enable-winrm-basic.cmd  tmp-enable-winrm.cmd  tmp-fix-openssh-authusers.cmd  tmp-fix-sshd-privs.cmd  tmp-fix-sshd-service.cmd  tmp-install-openssh-server.cmd  tmp-manual-sshd.cmd  tmp-query-openssh-shell.cmd  tmp-record-sshd-2222-auth.cmd  tmp-register-sshd.cmd  tmp-restart-sshd-service.cmd  tmp-run-install-sshd.cmd  tmp-set-and-upload-openssh-shell.cmd  tmp-set-openssh-default-shell.cmd  tmp-show-ssh-events.cmd  tmp-show-sshd-2222-log.cmd  tmp-show-sshd-debug.cmd  (+7 more)
.factory/: init.sh  (+1 more)
apps/desktop-tauri/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop-tauri/src-tauri/capabilities/: default.json
apps/desktop-tauri/src-tauri/src/: commands.rs  events.rs  geometry_store.rs  main.rs  proof_harness.rs  shell.rs  shortcut_bridge.rs  state.rs  surface.rs  surface_target.rs  tray_bridge.rs  tray_menu.rs  window_positioner.rs
rust/: CHANGELOG.md  Cargo.toml  README.md  build.rs  tauri.conf.json
rust/installer/: codexbar.iss
rust/legacy/: README.md  single_instance.rs
rust/legacy/native_ui/: app.rs  charts.rs  mod.rs  preferences.rs  provider_icons.rs
rust/legacy/tray/: manager.rs  menu_invalidation.rs  weekly_indicator.rs
rust/screenshots/: README.md
rust/scripts/: build-installer.sh
rust/src/: cost_scanner.rs  lib.rs  locale.rs  logging.rs  login.rs  main.rs  notifications.rs  secure_file.rs  settings.rs  shortcuts.rs  single_instance.rs  sound.rs  updater.rs  wsl.rs
rust/src/browser/: cookie_cache.rs  cookies.rs  detection.rs  mod.rs  watchdog.rs  wsl_paths.rs
rust/src/cli/: account.rs  autostart.rs  config.rs  cost.rs  mod.rs  tty_runner.rs  usage.rs
rust/src/core/: cost_pricing.rs  credential_migration.rs  credentials.rs  fetch_plan.rs  jsonl_scanner.rs  mod.rs  openai_dashboard.rs  provider.rs  provider_factory.rs  rate_window.rs  redactor.rs  session_quota.rs  token_accounts.rs  usage_pace.rs  usage_snapshot.rs  widget_snapshot.rs
rust/src/host/: command_runner.rs  mod.rs  session.rs
rust/src/native_ui/: app.rs  charts.rs  mod.rs  preferences.rs  provider_icons.rs  test_server.rs  theme.rs
rust/src/providers/: infini.rs  mod.rs
rust/src/providers/abacus/: mod.rs
rust/src/providers/alibaba/: mod.rs
rust/src/providers/amp/: mod.rs
rust/src/providers/antigravity/: mod.rs
rust/src/providers/augment/: keepalive.rs  mod.rs
rust/src/providers/claude/: mod.rs  oauth.rs  web_api.rs
rust/src/providers/codebuff/: mod.rs
rust/src/providers/codex/: api.rs  mod.rs
rust/src/providers/commandcode/: mod.rs
rust/src/providers/copilot/: api.rs  device_flow.rs  mod.rs
rust/src/providers/crof/: mod.rs
rust/src/providers/cursor/: api.rs  mod.rs
rust/src/providers/deepseek/: mod.rs
rust/src/providers/doubao/: mod.rs
rust/src/providers/factory/: mod.rs
rust/src/providers/gemini/: api.rs  mod.rs
rust/src/providers/jetbrains/: mod.rs
rust/src/providers/kilo/: mod.rs
rust/src/providers/kimi/: mod.rs
rust/src/providers/kimik2/: mod.rs
rust/src/providers/kiro/: mod.rs  version.rs
rust/src/providers/manus/: mod.rs
rust/src/status/: indicators.rs  mod.rs
rust/src/tray/: blink.rs  icon.rs  icon_twist.rs  manager.rs  menu_invalidation.rs  mod.rs  render.rs  weekly_indicator.rs
rust/wix/: License.rtf  main.wxs
(+229 files in other folders)
