[package]
name = "codexbar"
version = "0.25.1"
edition = "2024"
authors = ["CodexBar Contributors"]
description = "Windows and WSL system tray app for monitoring AI provider usage limits"
license = "MIT"
repository = "https://github.com/Finesssee/Win-CodexBar"
keywords = ["ai", "usage", "monitoring", "claude", "codex"]
categories = ["command-line-utilities"]

[lib]
path = "src/lib.rs"

[features]
default = []

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP client
reqwest = { version = "0.12", features = ["json", "cookies", "rustls-tls", "stream"], default-features = false }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# CLI
clap = { version = "4", features = ["derive", "env"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Error handling
thiserror = "2"
anyhow = "1"

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# Async utilities
async-trait = "0.1"
futures = "0.3"

# System tray (Windows)
tray-icon = "0.19"
# muda version must match what tray-icon uses
muda = "0.15"
# Channel for menu events
crossbeam-channel = "0.5"
# Window event loop for proper message pumping
winit = "0.30"

# Native GUI with egui
eframe = { version = "0.30", default-features = false, features = ["default_fonts", "wgpu", "persistence"] }
egui = "0.30"
egui_extras = { version = "0.30", features = ["svg", "image"] }
image = { version = "0.25", default-features = false, features = ["png"] }
rand = "0.9.2"
egui_plot = "0.34.0"
global-hotkey = "0.7.0"

# SVG rendering
resvg = "0.44"
usvg = "0.44"
tiny-skia = "0.11"

# SQLite for reading browser cookies
rusqlite = { version = "0.32", features = ["bundled"] }

# Encryption for cookie decryption
aes-gcm = "0.10"
base64 = "0.22"

# Hashing for update verification
sha2 = "0.11"

# Secure credential storage
keyring = "3"

# Directory paths
directories = "6"

# URL handling
url = "2"

# UUID generation
uuid = { version = "1", features = ["v4", "serde"] }

# Regex (lite version for simple matching)
regex-lite = "0.1"

# Which - find executables in PATH
which = "7"

# Native pseudo-terminal support for interactive CLI probes
portable-pty = "0.9"

# Dirs - standard directories
dirs = "6"

# Open URLs in browser
open = "5"

# Clipboard access
arboard = "3.2"

# Windows-only
[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_Security_Credentials",
    "Win32_Security_Cryptography",
    "Win32_System_Console",
    "Win32_System_Memory",
    "Win32_System_Registry",
    "Win32_System_Threading",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
] }

winreg = "0.55"

[build-dependencies]
chrono = "0.4"

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3"
mockito = "1.4"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"

[[bin]]
name = "codexbar"
path = "src/main.rs"
