[package]
name = "codexbar-desktop-tauri"
version = "0.22.1"
edition = "2024"
publish = false

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
codexbar = { path = "../../../rust" }
chrono = { version = "0.4", features = ["serde"] }
raw-window-handle = "0.6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = ["image-png", "tray-icon"] }
tauri-plugin-global-shortcut = "2"
tauri-plugin-single-instance = "2"
tokio = { version = "1", features = ["rt", "time", "sync"] }
tracing = "0.1"
uuid = { version = "1", features = ["v4"] }
